syntax = "proto2";
import "dccl/option_extensions.proto";
import "goby/middleware/protobuf/geographic.proto";

package goby.middleware.protobuf;

message DatumUpdate
{
    option (dccl.msg) = {
        unit_system: "si"
    };

    required .goby.middleware.protobuf.LatLonPoint datum = 1;
}
